--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,19 @@
 
     <build>
         <plugins>
+
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>3.0.3</version>
+                <configuration>
+                    <appName>jenkins-spring-hello</appName>
+                <processTypes>
+                    <web>java -jar -Dserver.port=$PORT target/${project.build.finalName}.jar</web>
+                </processTypes>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
